# lamprey

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  a.sql  agent-sandbox-healthcheck.sh  agent-sandbox-setup.sh  agent-sandbox.nix  architecture.md  arst.txt  auth.ts  biome.json  cli.ts  config.dev.toml  data.ts  deno.json  deny.toml  docker-compose.yaml  exports.d.ts  exports.ts  exports2.d.ts  flake.nix  future.ts  images.py  index.html  index.ts  oauth2.ts  package-lock.json  package.json  pg.sql  pnpm-lock.yaml  pnpm-workspace.yaml  routes.ts  rtc.ts  schema.sql  sync-compression-test.ts  test.db  test.ts  tsconfig.json  (+2 more)
crate-backend/: .env  Cargo.toml  README.md  _0019_types_room_thread.sql  build.rs
crate-backend-core/: Cargo.toml  README.md
crate-backend-core/src/: config.rs  data.rs  error.rs  lib.rs  queue.rs  state.rs
crate-backend-data-postgres/: Cargo.toml  README.md
crate-backend-data-postgres/.sqlx/: query-00a867cea8623e42c2a69dd8cab28ed62f489989c22791f63762920fb0564253.json  query-00ba978328a9ef9d1379a3f987fcd0555c6d3cc208ba3735d3cde0f046cde5d8.json  query-018c62725611e1892e911c99706cbb6eac048288fbe1e6d95049973dcd788b5b.json  query-028d4425e41584f2edc06c8c395f85e91b8c74fadbd12f1341725632fc8c2527.json  query-02c6a7fdeccecdbe55517ad444a6876553fec666bb1a84cbc85855a2be72c70b.json  query-042903262f2ce7c43331f0d18f007f387dd30f54f56d75b2233292e6838aedbf.json  query-052f2dfd161710e864753cf4a3033df9330618e22114c56d0472c8046ae2c369.json  query-0550c360601c99f9086ef4f4764f24cf4403622528b6312234cd41e12d3c1809.json  query-05a3fcc662cf764ed19fbdbaf2339b017f004847a81b52078abcde39962c3e25.json  query-069c27071e30fa286c1519202797b5d03e90d6210549ddcfcf209c0952923c27.json  query-08d1ebd774cda6a01a7151040002d447a04d27df85526236c827dcaac81ed870.json  query-0927c3f41e7552e564d78fe9248084aa3bde4b58ccb2b967f9d4a80997d62504.json  query-0b1a42c84b7e8d02caa0d5af3509a9d9fb65682244b4de4071b54538275b4e3e.json  query-0c8e41e970336514986ba7c42ef82dfbc96da64cba8c756a54bc90a88df970eb.json  query-0d50c0646e53e815568bd5aa1c33005077c45b2ce3677c16ecef61cfef2197fc.json  query-0ddcc26ec82294f650ad1afc5b6c2ea8a9b8825a1f9e19c1795c564117d8e24e.json  query-0fa1b5d6a1adc7e621fb1b31b2240e4635245642bb60ff30299e276cb6b5bdbc.json  query-10c5a28f65cd4914ea11a85db704738ca95da44491ca055c23f4282790bc89bd.json  query-11e66c9dc98cb78e3005e1d7fa8fa177aecd4d0611b0f8bec7faa92ac5a82d22.json  query-1206eec6652189f30f04fe170b46e94ac1838ff5f737324b7e7f7f65b359e707.json  query-1276f31207f848d39faaca582542c6461787721c3e88cda29e3a9bbbb1ffd24b.json  query-1519dc3438207465d609ae74cdd6ada9cc547332fa66a4ae5680b19f959a70c1.json  query-19907b703bab011d1fe391e45463fd51a40df739d5e886035a098317842e72ef.json  query-1a7108a1047abbd700bc1fc63d5a4203fbc71cbbb2578cfdaf1e43358c3c2934.json  query-1aa4927c4b61f36763b73e21ee3f34cb9f3f0290caa970513dbb962ffc6220ec.json  query-1c1bb2266dfeab17fd5f7135e3c9029d3bd9c1e519506b5b35fd4efe47922e6d.json  query-1c71ecd594941b2ffaa1b325fba070e048c7c4e60c561b2e879552d85f0a3262.json  query-1c946818eb427bfdd45dc6d6a873822a7d4b068db1c4f60518942da2f7580dfd.json  query-1c9d0ff4c49128f757b60e2c4fa43732fa2c4dd9428328346182efab34509d16.json  query-210539fb42a1b40a847ee262ff4a9743ec4a36a94f6a592b9ff516dc255f0070.json  query-2180cbb10a282d2dbcd27311c1717f469931e12b1b22cb149a81a821baf5a052.json  query-26d9bc24d9c7a9c48acae2713e49ac9ec8b876015154e194706e5389a898ee59.json  query-2a7fdd2645125127dcac1e3ad7a8f000bb677c1a1b9865c48fa181d7129fbe26.json  query-2b8b77bf84a094abd599888e2492ba35e45ec11d83bfa82fd6b70649a16c490b.json  query-2d0ea8967adabc3544b2f252d114d5bbe358cf1241ca8b0fdf23877873cc9a88.json  query-2d64ecab3111e5f181ade03d8f2af20e9665ac315041aa76f561226639365671.json  query-30146553d0d017fe091e5858f4e508e5da9aa4ddd6dc11a376db2c3cee8113b6.json  query-312bf41c4db52ae3e8d17d6c69741c1d5f7583e1b504368727010b86ce185cc9.json  query-31595038120eb1b5c4a963cc229f52a1655058d1594ec3ad129c54f9ebb4cc5f.json  query-341fc8a568796cfb455f070c85831364d04b05954e22f84e807457e89c2b2793.json  (+180 more)
crate-backend-data-postgres/migrations/: 0002_rooms.sql  0004_messages.sql  0008_message_counts.sql  0009_roles.sql  0013_unreads.sql  0014_uuids.sql  0015_media.sql  0016_message_json.sql  0017_thread_json.sql  0019_membership.sql  0020_role_roomid_not_null.sql  0021_drop_views.sql  0022_permission.sql  0025_media_bigints.sql  0027_media_link_type.sql  0029_user_version_rename.sql  0031_message_fts.sql  0032_invite_metadata.sql  0034_session_nullable_user_id.sql  0035_thread_drop_unused_columns.sql  0037_user_refactor.sql  0039_audit_log.sql  0040_audit_log_not_null.sql  0041_audit_log_nullable_reason.sql  0047_rename_membership_changed.sql  0049_audit_log_prev.sql  0055_view_attachment_json_again.sql  0057_thread_member_rename_membership_changed_at.sql  0061_fix_mime.sql  0062_fix_media_url.sql  0063_view_attachment_json_user_id.sql  0064_url_embed.sql  0067_url_embed_json.sql  0069_url_embed_json_ordering.sql  0070_message_attachment_normalize.sql  0074_permission_reactions.sql  0075_puppet_users.sql  0079_truncate_audit_logs.sql  (+141 more)
crate-backend-rest/: Cargo.toml  README.md  build.rs
crate-backend-services/: Cargo.toml
crate-backend-sync/: Cargo.toml  README.md
crate-bot/: Cargo.toml  README.md
crate-bridge/: Cargo.toml  README.md
crate-bridge-discord/: Cargo.toml
crate-bridge-matrix/: Cargo.toml
crate-cdn/: Cargo.toml  README.md
crate-cli/: Cargo.toml  README.md
crate-common/: Cargo.toml  README.md
crate-macros/: Cargo.toml  README.md  example.rs
crate-markdown/: Cargo.toml  README.md  architecture.md  jsr.json  package.json  plan.md  readme.md  syntax.md
crate-media/: Cargo.toml  README.md
crate-script/: Cargo.toml  README.md  exports.d.ts
crate-sdk/: Cargo.toml  README.md
crate-search/: Cargo.toml
crate-sfu/: Cargo.toml
crate-types/: Cargo.toml
crate-unfurl/: Cargo.toml  README.md  test.js  unfurl.d.ts
crate-voice/: ARCHITECTURE.md  Cargo.toml  README.md
kerosene/: Cargo.toml
kerosene-core/: Cargo.toml
kerosene-services/: Cargo.toml
kerosene-sync/: Cargo.toml
(+4044 files in other folders)
