[workspace]
resolver = "2"
members = [
  "crate-backend",
  "crate-backend-core",
  # "crate-backend-data-postgres",
  # "crate-backend-rest",
  # "crate-backend-sync",
  "crate-bot",
  "crate-bridge",
  "crate-common",
  "crate-hakari",
  # "crate-macros",
  "crate-media",
  "crate-sdk",
  "crate-voice",
  # "crate-*",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["tezlm"]
description = "yet another chat thing?"
license = "MIT OR Apache-2.0"
repository = "https://git.celery.eu.org/lamprey/lamprey"
keywords = ["lamprey"]

[profile.dev]
opt-level = 0

[profile.dev.package]
miniz_oxide.opt-level = 3
sqlx-macros.opt-level = 3
async-trait.opt-level = 3
image.opt-level = 3

[workspace.metadata.crane]
name = "lamprey"
