[workspace]
resolver = "3"
members = [
  "scanner-malware",
  "crate-*",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["tezlm"]
description = "yet another chat thing?"
license = "MIT OR Apache-2.0"
repository = "https://git.celery.eu.org/lamprey/lamprey"
keywords = ["lamprey"]

[profile.dev]
opt-level = 0

[profile.dev.package]
sqlx-macros.opt-level = 3
async-trait.opt-level = 3
image.opt-level = 3
lamprey-macros.opt-level = 3

[workspace.metadata.crane]
name = "lamprey"
