[package]
name = "lamprey-backend-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "time", "ipnetwork"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tracing = "0.1.41"
figment = { version = "0.10.19", features = ["env", "toml"] }
uuid = { version = "1.11.1", features = ["v7", "serde", "v4", "fast-rng"] }
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common", features = ["utoipa", "validator"] }
lamprey-macros = { path = "../crate-macros" }
# Add other shared dependencies as needed
