[package]
name = "lamprey-backend-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
async-tempfile = "0.7.0"
async-trait = "0.1.85"
axum = { version = "0.8.1", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
base32 = "0.5.1"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.43"
chrono-tz = "0.10.4"
clap = { version = "4.5.31", features = ["derive"] }
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common", features = ["utoipa", "validator"] }
csscolorparser = { version = "0.7.0", features = ["lab"] }
dashmap = "6.1.0"
decancer = "3.3.3"
diff = "0.1.13"
dotenvy = "0.15.7"
ece = "2.3.1"
figment = { version = "0.10.19", features = ["env", "toml"] }
flate2 = "1.1.5"
futures = "0.3.31"
futures-util = "0.3.31"
headers = "0.4.0"
http = "1.2.0"
httpdate = "1.0.3"
image = { version = "0.25.6", features = ["avif"] }
infer = "0.19.0"
ipnet = { version = "2.11.0", features = ["serde"] }
jsonwebkey = { version = "0.4.0", features = ["generate"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
lamprey-hakari = { version = "0.1", path = "../crate-hakari" }
lamprey-macros = { path = "../crate-macros" }
lettre = { version = "0.11.17", default-features = false, features = ["builder", "pool", "smtp-transport", "tokio1-rustls-tls"] }
linkify = "0.10.0"
mediatype = { version = "0.20.0", features = ["serde"] }
moka = { version = "0.12.10", features = ["future"] }
nanoid = "0.4.0"
once_cell = "1.21.3"
opendal = { version = "0.54.0", features = ["services-s3"] }
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "logs", "metrics", "reqwest", "tokio", "tracing", "trace"], default-features = false }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "tokio"] }
p256 = { version = "0.13.2", features = ["pkcs8"] }
prometheus = { version = "0.14.0", features = ["process"] }
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
rrule = "0.14.0"
rsa = "0.9.10"
rust-argon2 = "3.0.0"
rust-embed = { version = "8.9.0", optional = true, features = ["interpolate-folder-path"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha2 = "0.10.9"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "time", "ipnetwork"] }
strum = { version = "0.27.2", features = ["derive"] }
subtle = "2.6.1"
tantivy = "0.25.0"
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["serde"] }
tokio = { version = "1.42.0", features = ["macros", "process", "rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
totp-rs = "5.7.0"
tower-http = { version = "0.6.2", features = ["catch-panic", "cors", "limit", "propagate-header", "sensitive-headers", "trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
utoipa = { version = "5.3.0", features = ["axum_extras", "url", "uuid"] }
utoipa-axum = "0.2.0"
uuid = { version = "1.11.1", features = ["v7", "serde", "v4", "fast-rng", "macro-diagnostics"] }
validator = "0.20.0"
webpage = { version = "2.0.1", default-features = false, features = ["serde"] }
yrs = { version = "0.25.0", features = ["sync"] }
