[package]
name = "lamprey-backend-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
async-nats = "0.46.0"
async-tempfile = "0.7.0"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "ws", "multipart"] }
bytes = "1.11.1"
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common", features = ["utoipa", "validator"] }
lamprey-script = { package = "lamprey-script", version = "0.1.0", path = "../crate-script" }
figment = { version = "0.10.19", features = ["env", "toml"] }
flate2 = "1.1.9"
http = "1.4.0"
image = { version = "0.25.10", features = ["avif"] }
ipnet = { version = "2.12.0", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
lamprey-hakari = { version = "0.1", path = "../crate-hakari" }
lamprey-macros = { path = "../crate-macros" }
lettre = { version = "0.11.19", default-features = false, features = ["builder", "pool", "smtp-transport", "tokio1-rustls-tls"] }
mediatype = { version = "0.20.0", features = ["serde"] }
opendal = { version = "0.54.1", features = ["services-s3", "services-fs"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "logs", "metrics", "reqwest", "tokio", "tracing", "trace"], default-features = false }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls-native-roots", "json"] }
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "time", "ipnetwork"] }
strum = { version = "0.27.2", features = ["derive"] }
tantivy = "0.26.1"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.50.0", features = ["macros", "process", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "url", "uuid"] }
uuid = { version = "1.22.0", features = ["v7", "serde", "v4", "fast-rng", "macro-diagnostics"] }
validator = "0.20.0"
yrs = { version = "0.25.0", features = ["sync"] }
multer = "3.1.0"
maxminddb = "0.28.1"
crc32fast = "1.5.0"
