[package]
name = "lamprey-backend-data-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
build = "build.rs"

[build-dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common" }
dashmap = "6.1.0"
futures = "0.3.32"
futures-util = "0.3.32"
lamprey-backend-core = { version = "0.1.1", path = "../crate-backend-core" }
lamprey-hakari = { version = "0.1", path = "../crate-hakari" }
once_cell = "1.21.3"
rand = "0.9.2"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "time", "ipnetwork", "migrate"] }
strum = { version = "0.27.2", features = ["derive"] }
subtle = "2.6.1"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.22.0", features = ["v7", "serde", "v4", "fast-rng", "macro-diagnostics"] }
