[package]
name = "lamprey-backend-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
tokio = { version = "1.42.0", features = ["rt", "macros"] }
tracing = "0.1.41"
lamprey-backend-core = { path = "../crate-backend-core" }
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common", features = ["utoipa", "validator"] }
lamprey-macros = { path = "../crate-macros" }
opendal = { version = "0.54.1", features = ["services-s3", "services-fs"] }
lamprey-backend-data-postgres = { version = "0.1.1", path = "../crate-backend-data-postgres" }
jsonwebtoken = "10.4.0"
uuid = "1.23.3"
bytes = "1.11.1"
url = "2.5.8"
reqwest = "0.13.4"
