[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
async-tempfile = "0.7.0"
async-trait = "0.1.85"
axum = { version = "0.8.1", features = ["macros", "ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env", "toml"] }
futures-util = "0.3.31"
headers = "0.4.0"
http = "1.2.0"
opendal = { version = "0.54.0", features = ["services-s3"] }
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "time"] }
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["serde"] }
tokio = { version = "1.42.0", features = ["macros", "process", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["catch-panic", "cors", "propagate-header", "sensitive-headers", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
common = { version = "0.1.0", path = "../crate-common", features = ["utoipa", "validator"] }
url = { version = "2.5.4", features = ["serde"] }
utoipa = { version = "5.3.0", features = ["axum_extras", "url", "uuid"] }
uuid = { version = "1.11.1", features = ["v7", "serde", "v4", "fast-rng", "macro-diagnostics"] }
crate-hakari = { version = "0.1", path = "../crate-hakari" }
nanoid = "0.4.0"
utoipa-axum = "0.2.0"
image = { version = "0.25.6", features = ["avif"] }
mediatype = { version = "0.20.0", features = ["serde"] }
validator = "0.20.0"
webpage = { version = "2.0.1", default-features = false, features = ["serde"] }
moka = { version = "0.12.10", features = ["future"] }
linkify = "0.10.0"
ipnet = { version = "2.11.0", features = ["serde"] }
csscolorparser = { version = "0.7.0", features = ["lab"] }
clap = { version = "4.5.31", features = ["derive"] }
rust-argon2 = "3.0.0"
rand = "0.9.2"
lettre = { version = "0.11.17", default-features = false, features = ["builder", "pool", "smtp-transport", "tokio1-rustls-tls"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "tokio"] }
opentelemetry = "0.30.0"
tracing-opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "logs", "metrics", "reqwest", "tokio", "tracing", "trace"], default-features = false }
futures = "0.3.31"
infer = "0.19.0"
sha2 = "0.10.9"
base64 = "0.22.1"
diff = "0.1.13"
strum = { version = "0.27.2", features = ["derive"] }

[build-dependencies]
vergen-gix = { version = "1.0.0", features = ["build", "cargo", "rustc"] }
