[package]
name = "lamprey-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "lamprey"
path = "src/main.rs"

[dependencies]
async-tempfile = "0.7.0"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env", "toml"] }
futures-util = "0.3.32"
headers = "0.4.1"
http = "1.4.0"
opendal = { version = "0.54.1", features = ["services-s3", "services-fs"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "time", "ipnetwork"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.50.0", features = ["macros", "process", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["catch-panic", "cors", "limit", "propagate-header", "sensitive-headers", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common", features = ["utoipa", "validator"] }
url = { version = "2.5.8", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "url", "uuid"] }
uuid = { version = "1.22.0", features = ["v7", "serde", "v4", "fast-rng", "macro-diagnostics"] }
nanoid = "0.4.0"
utoipa-axum = "0.2.0"
image = { version = "0.25.10", features = ["avif"] }
mediatype = { version = "0.20.0", features = ["serde"] }
validator = "0.20.0"
webpage = { version = "2.0.1", default-features = false, features = ["serde"] }
moka = { version = "0.12.14", features = ["future"] }
rmp-serde = "1.3.1"
ipnet = { version = "2.12.0", features = ["serde"] }
csscolorparser = { version = "0.7.2", features = ["lab"] }
clap = { version = "4.5.60", features = ["derive"] }
rust-argon2 = "3.0.0"
rand = "0.9.2"
lettre = { version = "0.11.19", default-features = false, features = ["builder", "pool", "smtp-transport", "tokio1-rustls-tls"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "tokio"] }
opentelemetry = "0.30.0"
tracing-opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "logs", "metrics", "reqwest", "tokio", "tracing", "trace"], default-features = false }
futures = "0.3.32"
infer = "0.19.0"
sha2 = "0.10.9"
base64 = "0.22.1"
diff = "0.1.13"
strum = { version = "0.27.2", features = ["derive"] }
lamprey-hakari = { version = "0.1", path = "../crate-hakari" }
lamprey-markdown = { version = "0.1", path = "../crate-markdown" }
regex = "1.12.3"
once_cell = "1.21.3"
bytes = "1.11.1"
rust-embed = { version = "8.11.0", optional = true, features = ["interpolate-folder-path"] }
prometheus = { version = "0.14.0", features = ["process"] }
flate2 = "1.1.9"
totp-rs = "5.7.1"
base32 = "0.5.1"
yrs = { version = "0.25.0", features = ["sync"] }
decancer = "3.3.3"
tokio-stream = { version = "0.1.18", features = ["sync"] }
httpdate = "1.0.3"
rrule = "0.14.0"
tantivy = "0.25.0"
chrono = "0.4.44"
chrono-tz = "0.10.4"
ece = "2.3.1"
rsa = "0.9.10"
jsonwebkey = { version = "0.4.0", features = ["generate"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
p256 = { version = "0.13.2", features = ["pkcs8"] }
subtle = "2.6.1"
minijinja = "2.17.1"
lamprey-backend-core = { version = "0.1.1", path = "../crate-backend-core" }
lamprey-backend-data-postgres = { version = "0.1.1", path = "../crate-backend-data-postgres" }
async-nats = "0.46.0"
blake3 = { version = "1.8.3", features = ["mmap"] }
arc-swap = "1.8.2"
im = "15.1.0"
kameo = "0.19.2"
lamprey-macros = { version = "0.1", path = "../crate-macros" }
lamprey-unfurl = { version = "0.1", path = "../crate-unfurl" }
pastey = "0.2.1"
# lamprey-backend-rest = { version = "0.1.1", path = "../crate-backend-rest" }
# lamprey-backend-sync = { version = "0.1.1", path = "../crate-backend-sync" }

[build-dependencies]
vergen-gix = { version = "9.1.0", features = ["build", "cargo", "rustc"] }

[features]
default = []
embed-frontend = ["rust-embed"]
rust-embed = ["dep:rust-embed"]
