[package]
name = "bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
common = { version = "0.1.0", path = "../crate-common" }
crate-hakari = { version = "0.1", path = "../crate-hakari" }
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env", "toml"] }
sdk = { version = "0.1.0", path = "../crate-sdk" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
str0m = "0.10.0"
stunclient = "0.4.1"
symphonia = "0.5.4"
systemstat = "0.2.5"
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
