[package]
name = "lamprey-bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common" }
lamprey-hakari = { version = "0.1", path = "../crate-hakari" }
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env", "toml"] }
sdk = { package = "lamprey-sdk", version = "0.1.0", path = "../crate-sdk" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
str0m = "0.10.0"
stunclient = "0.4.2"
symphonia = "0.5.5"
systemstat = "0.2.6"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
