[package]
name = "bridge-matrix"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.85"
dashmap = "6.1.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["fs", "rt-multi-thread"] }
toml_edit = { version = "0.22.22", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
types = { version = "0.1.0", path = "../crate-types" }
uuid = "1.12.0"
crate-hakari = { version = "0.1", path = "../crate-hakari" }
sdk = { version = "0.1.0", path = "../crate-sdk" }
anyhow = "1.0.95"
matrix-sdk = { version = "0.9.0", features = ["anyhow", "automatic-room-key-forwarding", "e2e-encryption", "markdown", "rustls-tls", "sqlite"], default-features = false }
serde_json = "1.0.138"
mime = "0.3.17"
