[package]
name = "lamprey-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.85"
dashmap = "6.1.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde = "1.0.217"
serenity = "0.12.4"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "uuid"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common" }
uuid = "1.12.0"
sdk = { package = "lamprey-sdk", version = "0.1.0", path = "../crate-sdk" }
time = { version = "0.3", features = ["serde-human-readable", "macros"] }
anyhow = "1.0.95"
figment = { version = "0.10.19", features = ["env", "toml"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "logs", "metrics", "reqwest", "tokio", "tracing", "trace"], default-features = false }
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "tokio"] }
tracing-opentelemetry = "0.31.0"
lamprey-hakari = { version = "0.1", path = "../crate-hakari" }
