[package]
name = "cdn"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.4"
image = "0.25.6"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
opendal = { version = "0.51.1", features = ["services-s3"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid"] }
url = "2.5.4"
common = { path = "../crate-common" }
http = "1.2.0"
tower-http = { version = "0.6.2", features = ["trace"] }
anyhow = "1.0.86"
bytes = "1.10.1"
crate-hakari = { version = "0.1", path = "../crate-hakari" }
