[package]
name = "cdn"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.4"
image = "0.25.6"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
opendal = { version = "0.51.1", features = ["services-s3"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid"] }
url = "2.5.4"
common = { path = "../crate-common" }
http = "1.2.0"
tower-http = { version = "0.6.2", features = ["trace"] }
anyhow = "1.0.86"
bytes = "1.10.1"
crate-hakari = { version = "0.1", path = "../crate-hakari" }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "tokio"] }
opentelemetry = "0.30.0"
tracing-opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "logs", "metrics", "reqwest", "tokio", "tracing", "trace"], default-features = false }
headers = "0.4.1"
utoipa-axum = "0.2.0"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
serde_json = "1.0.143"
futures-util = "0.3.31"
percent-encoding = "2.3.2"
uuid = { version = "1.18.0", features = ["v7"] }
