[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
time = "0.3.37"
url = { version = "2.5.4", features = ["serde"] }
utoipa = { version = "5.3.0", features = ["axum_extras", "url", "uuid", "time"], optional = true }
uuid = { version = "1.12.0", features = ["serde"] }
mediatype = { version = "0.20.0", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"], optional = true }
strum = { version = "0.27.1", features = ["derive"] }
pastey = "0.1.1"
thiserror = "2.0.16"
str0m = { version = "0.10.0", optional = true }
crate-hakari = { version = "0.1", path = "../crate-hakari" }

[features]
# serde = []
utoipa = ["dep:utoipa"]
validator = ["dep:validator"]
str0m = ["dep:str0m"]
feat_thread_type_forums = []
feat_forward_threads = []
feat_custom_emoji = []
feat_message_move = []
feat_message_forwarding = []
feat_automod = []
feat_interaction = []
feat_interaction_reaction = ["feat_interaction"]
feat_interaction_status = ["feat_interaction"]

default = [
  "utoipa",
  "validator",
  "feat_custom_emoji",
  "feat_thread_type_forums",
  "feat_interaction_reaction",
  "str0m",
]
