[package]
name = "lamprey-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
time = { version = "0.3.47", features = ["formatting", "parsing", "serde"] }
url = { version = "2.5.8", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "url", "uuid", "time"], optional = true }
uuid = { version = "1.22.0", features = ["serde", "v7"] }
mediatype = { version = "0.20.0", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"], optional = true }
strum = { version = "0.27.2", features = ["derive"] }
unicode-segmentation = "1.12.0"
unicode-properties = "0.1.4"
regex = "1.12.3"
pastey = "0.1.1"
thiserror = "2.0.18"
str0m = { version = "0.10.0", optional = true }
lamprey-hakari = { version = "0.1", path = "../crate-hakari" }
lamprey-macros = { version = "0.1", path = "../crate-macros" }
base64 = "0.22.1"

[features]
serde = ["dep:serde", "dep:serde_json"]
utoipa = ["dep:utoipa"]
validator = ["dep:validator", "serde"]
str0m = ["dep:str0m"]
feat_thread_type_forums = []
feat_forward_threads = []
feat_custom_emoji = []
feat_message_move = []
feat_message_forwarding = []
feat_automod = []
feat_interaction = []
feat_interaction_reaction = ["feat_interaction"]
feat_interaction_status = ["feat_interaction"]
feat_search_ordering = []
ptr_arc = []
ptr_rc = []
ptr_box = []

default = [
  "utoipa",
  "validator",
  "feat_custom_emoji",
  "feat_thread_type_forums",
  "feat_interaction",
  "feat_interaction_reaction",
  "feat_search_ordering",
  "str0m",
  "ptr_box",
]
